k8s/argocd-homelab/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
spec:
  type: ClusterIP
  ports:
    - port: 5055
      targetPort: 5055
      protocol: TCP
  selector:
    app: overseerr
